# PPTAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  BESTPRACTICE.md  DOC.md  INSTALLATION_SUMMARY.md  LICENSE  MANIFEST.in  PPTAgent系统学习路径.md  README.md  myllm_learning.py  package-lock.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr-ci.yml  push-ci.yml
docker/: Dockerfile  launch.sh
docs/: improvement-plan.md
pptagent/: __init__.py  apis.py  induct.py  llms.py  ppteval.py
pptagent/.ipynb_checkpoints/: agent-checkpoint.py  multimodal-checkpoint.py  ppteval-checkpoint.py  pptgen-checkpoint.py
pptagent/document/: document.py  element.py
pptagent/document/.ipynb_checkpoints/: document-checkpoint.py
pptagent/presentation/: __init__.py  presentation.py
pptagent/prompts/: category_split.txt  heading_extract.txt  markdown_table_caption.txt  ppteval_coherence.txt  ppteval_content.txt  ppteval_describe_content.txt  ppteval_style.txt
pptagent/roles/: agent.yaml  content_organizer.yaml  schema_extractor.yaml
pptagent/roles/.ipynb_checkpoints/: planner-checkpoint.yaml
pptagent_ui/: .pnp.cjs  backend.py  package-lock.json  package.json  readme.md  serve_sd3.py  vue.config.js
pptagent_ui/.ipynb_checkpoints/: backend-checkpoint.py
pptagent_ui/src/: App.vue  main.js
pptagent_ui/src/components/: Generate.vue  Upload.vue
pptagent_ui/src/router/: index.js
pptx/: __init__.py  util.py
pptx/dml/: color.py  fill.py
pptx/enum/: base.py
pptx/oxml/: __init__.py  simpletypes.py  text.py
pptx/oxml/shapes/: shared.py
pptx/shapes/: autoshape.py  base.py  connector.py
pptx/text/: text.py
test/: conftest.py  test.pptx  test_apis.py  test_document.py  test_induct.py  test_layout.py  test_llm.py  test_model_utils.py  test_multimodal.py  test_pptgen.py  test_presentation.py  test_utils.py
